corrected colors in dark mode

--- a/style.css
+++ b/style.css
@@ -359,19 +359,6 @@ input:checked + .slider:before {
     text-align: center;
 }
 
-#techStack ul li .popover::before {
-    content: '';
-    display: inline-block;
-    height: 0px;
-    width: 0px;
-    border: 5px solid transparent;
-    border-top: 5px solid var(--blue);
-    color: var(--white);
-    position: absolute;
-    bottom: -10px;
-    left: 50px;
-}
-
 #techStack ul li:hover .popover,
 .popover:hover {
     width: 80px;
@@ -648,23 +635,20 @@ input:checked + .slider:before {
 ::-webkit-scrollbar {
     width: 15px;
   }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
-    border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: var(--blue); 
-    border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-    background: #3156bc; 
-  }
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: var(--blue); 
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #3156bc; 
+}
 
 
 
